--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <nav class="menu">
                     <ul>
                         <li><a href="#Accueil">Accueil</a></li>
-                        <li><a href="#Apropos">À propos</a></li>
-                        <li><a href="#Contact">Contact</a></li>
+                        <li><a href="#Video">À propos</a></li>
+                        <li><a href="#Galerie">Contact</a></li>
                     </ul>
                 </nav>
 
@@ -28,8 +28,8 @@
                         <source src="video/video_01.mp4" type="video/mp4">
                     </video>
                 </div>
-                <div class="galerie">
-                    <div id="slider">
+                <div class="carousel">
+                    <div id="galerie">
                       <figure>
                         <img src="img/img_05.jpg" alt>
                         <img src="img/img_06.jpg" alt>
