--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="style.css">
         <!-- -->
         <link rel="icon" type="image/png" href="img/favicon/logo.png" />
-        <!-- <script src="./js/jquery.js"></script> 
+        <!-- <script src="./js/jquery.js"></script>
         <script src="./js/main.js"></script>   -->
     </head>
     <body>
@@ -30,6 +30,10 @@
 
             </div>
             <div id="contenu">
+                <div class="presentation">
+                    <h2>Présentation</h2>
+                    <p>Bienvenue sur mon site web ! Je m'appelle Pol-Efflam et je vous présente mon garage rempli de voitures de sport d'une rapidité et d'une beauté sans pareilles. Vous pouvez me retrouver sur mon compte Instagram en cliquant sur le lien au-dessus !</p>
+                </div>
                 <div class="video">
                     <!-- -->
                     <video controls width="800" playsinline autoplay muted loop>
