--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
     <body>
         <!-- -->
         <div id="conteneur">
-            <div id="menu">
+            <div id="haut_page">
                 <!-- -->
                 <h1>LE GARAGE DE POL-EFFLAM</h1>
-                <nav class="menu">
+                <nav class="liens">
                     <!-- -->
                     <ul>
                         <!-- -->
                         <li><a href="#Accueil">Accueil</a></li>
                         <li><a href="https://www.instagram.com/polefflam_harel/">Mon Insta</a></li>
-                        <li><a href="#Galerie">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -54,10 +53,9 @@
                       </figure>
                     </div>
                 </div>
-
-            </div>
-            <div id="bas_page">
-                <p>Site réalisé par Pol-Efflam Harel - Copyright © Pol-Efflam Harel 2022</p>
+                <div id="bas_page">
+                    <p>Site réalisé par Pol-Efflam Harel - Copyright © Pol-Efflam Harel 2022</p>
+                </div>
             </div>
         </div>
     </body>
