--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="haut_page">
                 <!-- -->
                 <h1>LE GARAGE DE POL-EFFLAM</h1>
-                <nav class="liens">
+                <nav class="bouton">
                     <!-- -->
                     <ul>
                         <!-- -->
@@ -52,6 +52,9 @@
                         <img src="img/img_09.jpg" alt>
                       </figure>
                     </div>
+                </div>
+                <div class="catalogue">
+
                 </div>
                 <div id="bas_page">
                     <p>Site réalisé par Pol-Efflam Harel - Copyright © Pol-Efflam Harel 2022</p>
