--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                     <!-- -->
                     <ul>
                         <!-- -->
-                        <li><a href="#Accueil">Accueil</a></li>
                         <li><a href="https://www.instagram.com/polefflam_harel/">Mon Insta</a></li>
                     </ul>
                 </nav>
@@ -35,26 +34,32 @@
                 </div>
                 <div class="video">
                     <!-- -->
-                    <video controls width="800" playsinline autoplay muted loop>
+                    <video controls width="100%" playsinline autoplay muted loop>
                         <!-- -->
                         <source src="video/video_01.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="carousel">
                     <div id="galerie">
+                        <h2>Ma collection</h2>
                         <!-- -->
-                      <figure>
-                        <!-- -->
-                        <img src="img/img_05.jpg" alt>
-                        <img src="img/img_06.jpg" alt>
-                        <img src="img/img_07.jpg" alt>
-                        <img src="img/img_08.jpg" alt>
-                        <img src="img/img_09.jpg" alt>
-                      </figure>
+                        <figure>
+                            <!-- -->
+                            <img src="img/img_05.jpg">
+                            <img src="img/img_06.jpg">
+                            <img src="img/img_07.jpg">
+                            <img src="img/img_08.jpg">
+                            <img src="img/img_09.jpg">
+                        </figure>
                     </div>
                 </div>
                 <div class="catalogue">
-
+                    <h2>Catalogue des ventes</h2>
+                    <img src="img/img_10.jpg">
+                    <img src="img/img_11.jpg">
+                    <img src="img/img_12.jpg">
+                    <img src="img/img_13.jpg">
+                    <!-- <img src="img/img_14.jpg"> -->
                 </div>
                 <div id="bas_page">
                     <p>Site réalisé par Pol-Efflam Harel - Copyright © Pol-Efflam Harel 2022</p>
