--- a/index.html
+++ b/index.html
@@ -1,27 +1,21 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <meta name="description" content=""> 
-        <!-- -->
+        <meta name="description" content="">
         <meta name="viewport" content="user-scalable=no, initial-scale=1.0,maximum-scale=1.0,width=device-width">
-        <!-- -->
-        <title>LE GARAGE DE POL-EFFLAM</title>
+        <title>AUTOSPORT DELUXE</title>
         <link rel="stylesheet" href="style.css">
-        <!-- -->
         <link rel="icon" type="image/png" href="img/favicon/logo.png" />
-        <!-- <script src="./js/jquery.js"></script>
-        <script src="./js/main.js"></script>   -->
     </head>
     <body>
-        <!-- -->
+        <!-- La div conteneur contient toute la structure de ma page -->
         <div id="conteneur">
             <div id="haut_page">
-                <!-- -->
-                <h1>LE GARAGE DE POL-EFFLAM</h1>
+                <!-- Titre principale de mon site -->
+                <h1>AUTOSPORT DELUXE</h1>
                 <nav class="bouton">
-                    <!-- -->
                     <ul>
-                        <!-- -->
+                        <!-- Lien vers mon compte Instagram -->
                         <li><a href="https://www.instagram.com/polefflam_harel/">Mon Insta</a></li>
                     </ul>
                 </nav>
@@ -33,18 +27,16 @@
                     <p>Bienvenue sur mon site web ! Je m'appelle Pol-Efflam et je vous présente mon garage rempli de voitures de sport d'une rapidité et d'une beauté sans pareilles. Vous pouvez me retrouver sur mon compte Instagram en cliquant sur le lien au-dessus !</p>
                 </div>
                 <div class="video">
-                    <!-- -->
+                    <!-- Utilisation de la balise video et des paramètres possibles -->
                     <video controls width="100%" playsinline autoplay muted loop>
-                        <!-- -->
                         <source src="video/video_01.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div class="carousel">
                     <div id="galerie">
                         <h2>Ma collection</h2>
-                        <!-- -->
                         <figure>
-                            <!-- -->
+                            <!-- liste des images de mon carousel d'images -->
                             <img src="img/img_05.jpg">
                             <img src="img/img_06.jpg">
                             <img src="img/img_07.jpg">
@@ -59,7 +51,6 @@
                     <img src="img/img_11.jpg">
                     <img src="img/img_12.jpg">
                     <img src="img/img_13.jpg">
-                    <!-- <img src="img/img_14.jpg"> -->
                 </div>
                 <div id="bas_page">
                     <p>Site réalisé par Pol-Efflam Harel - Copyright © Pol-Efflam Harel 2022</p>
