--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
                     <img src="img/img_12.jpg">
                     <img src="img/img_13.jpg">
                 </div>
+                <div class="catalogue">
+                    <h2>Les marques présentes sur mon site web</h2>
+                    <img src="img/ferrari.png"><figcaption>Ferrari</figcaption>
+                    <img src="img/lamborghini.png"><figcaption>Lamborghini</figcaption>
+                    <img src="img/pagani.png"><figcaption>Pagani</figcaption>
+                    <img src="img/maclaren"><figcaption>MacLaren</figcaption>
+                </div>
                 <div id="bas_page">
                     <p>Site réalisé par Pol-Efflam Harel - Copyright © Pol-Efflam Harel 2022</p>
                 </div>
