--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <img src="img/pagani.png"><figcaption>Pagani</figcaption>
                     <img src="img/maclaren"><figcaption>MacLaren</figcaption>
                     <img src="img/astonmartin.png"><figcaption>Aston Martin</figcaption>
-                    <img src="img/mercedes"><figcaption>Mercedes</figcaption>
+                    <img src="img/mercedes.png"><figcaption>Mercedes</figcaption>
                 </div>
                 <div id="bas_page">
                     <p>Site réalisé par Pol-Efflam Harel - Copyright © Pol-Efflam Harel 2022</p>
