--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="">
+        <meta name="description" content="Autosport Deluxe vous permet de prendre le volant des véhicules de sport les plus exclusifs au monde. Bienvenue dans ma collection !">
         <meta name="viewport" content="user-scalable=no, initial-scale=1.0,maximum-scale=1.0,width=device-width">
         <title>AUTOSPORT DELUXE</title>
         <link rel="stylesheet" href="style.css">
